syntax = "proto3";

import "scalapb/scalapb.proto";

package com.github.vsuharnikov.scalagrpcexample;

service HelloWorld {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
  string message = 2;
}

message SayHelloResponse {
  string message = 1;
}